<resources>
    <string name="app_name">My Application</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Abrir menú lateral</string>
    <string name="navigation_drawer_close">Cerrar menú lateral</string>
    <string name="crear_reporte_de_sitio">Crear reporte de sitio</string>
    <string name="crear_reporte_de_equipo">Crear reporte de equipo</string>
    <string name="selecciona_sitio">Selecciona el sitio:</string>
    <string name="selecciona_equipo">Selecciona el equipo:</string>
    <string name="anote_sus_observaciones">Anote sus observaciones</string>
    <string name="crear_reporte">Crear reporte</string>

    <string-array name="Sitios">
        <item>ARP-101</item>
        <item>ARP-102</item>
        <item>ARP-103</item>
        <item>CAJ-101</item>
        <item>CAJ-102</item>
        <item>CAJ-103</item>
        <item>LIM-101</item>
        <item>LIM-102</item>
        <item>LIM-103</item>
    </string-array>
    <string-array name="Equipos">
        <item>Switch_101</item>
        <item>Switch-102</item>
        <item>Router-101</item>
        <item>Router-102</item>
        <item>Router-103</item>
        <item>Patch-101</item>
        <item>Patch-102</item>
        <item>Repetidor-101</item>
        <item>Repetidor-102</item>
    </string-array>
    <string-array name="TipodeEquipo">
        <item>Router</item>
        <item>Switch</item>
        <item>Repetidor</item>
        <item>Splitter</item>
        <item>Patch Pannel</item>
    </string-array>

    <string-array name="log_types">
        <item>INFO</item>
        <item>WARNING</item>
        <item>ERROR</item>
        <item>CRITICAL</item>
    </string-array>

    <string-array name="user_rol">
        <item>Admin</item>
        <item>Supervisor</item>
        <item>Superadmin</item>
    </string-array>

    <string name="filter_by_date_range">Rango de Fechas</string>
    <string name="from">Desde:</string>
    <string name="to">Hasta:</string>
    <string name="select_date">- - -</string>
    <string name="filter_by_log_type">Tipo de Log</string>
    <string name="filter_by_user">Rol de Usuario</string>
    <string name="enter_user">Ingrese Usuario</string>
    <string name="cancel">Cancelar</string>
    <string name="apply">Aplicar</string>

</resources>