<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <!-- Filter by Date Range -->
    <TextView
        android:id="@+id/textFilterByDateRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_by_date_range"
        android:textStyle="bold"
        android:paddingBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewFromLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFilterByDateRange" />

    <TextView
        android:id="@+id/textViewFromDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:padding="8dp"
        android:gravity="center"
        android:text="@string/select_date"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toEndOf="@id/textViewFromLabel"
        app:layout_constraintEnd_toStartOf="@id/textViewToLabel"
        app:layout_constraintTop_toBottomOf="@id/textFilterByDateRange"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:id="@+id/textViewToLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        app:layout_constraintStart_toEndOf="@id/textViewFromDate"
        app:layout_constraintTop_toBottomOf="@id/textFilterByDateRange" />

    <TextView
        android:id="@+id/textViewToDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:padding="8dp"
        android:gravity="center"
        android:text="@string/select_date"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toEndOf="@id/textViewToLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFilterByDateRange"
        app:layout_constraintWidth_percent="0.4" />

    <!-- Filter by Log Type -->
    <TextView
        android:id="@+id/textFilterByLogType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_by_log_type"
        android:textStyle="bold"
        android:paddingBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewFromDate" />

    <Spinner
        android:id="@+id/spinnerLogType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFilterByLogType"
        android:entries="@array/log_types" />

    <!-- Filter by User Rol -->

    <TextView
        android:id="@+id/textFilterByUserRol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_by_user"
        android:textStyle="bold"
        android:paddingBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerLogType" />

    <Spinner
        android:id="@+id/spinnerUserRol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFilterByUserRol"
        android:entries="@array/user_rol" />

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:paddingTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerUserRol">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/buttonApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply"
            android:layout_marginStart="16dp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
